--- a/blocks/content.css
+++ b/blocks/content.css
@@ -6,18 +6,36 @@
 
 .content__gallery {
   display: flex;
-  flex-wrap: wrap;
-  align-content: space-between;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.content__cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 2fr);
   gap: 17px;
 }
 
-@media screen and (max-width: 725px) {
-  /* .content,
-  .content__gallery {
-    max-width: 725px;
-  } */
-
-  .content__gallery {
+@media screen and (max-width: 880px) {
+  .content__cards {
+    margin: 0;
+    padding: 0;
+    grid-template-columns: repeat(2, max-content);
+    grid-template-rows: repeat(3, 2fr);
     gap: 20px;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .content {
+    min-width: 282px;
+    margin: 0 19px 48px;
+  }
+
+  .content__cards {
+    grid-template-columns: repeat(1, max-content);
+    grid-template-rows: repeat(auto-fit, 2fr);
   }
 }
