--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -4,13 +4,13 @@
 }
 
 .footer__copyright {
-  color: #545454;
+  color: rgb(84, 84, 84);
   font-family: "Inter", "Arial", sans-serif;
   font-size: 18px;
 }
 
 @media screen and (max-width: 880px) {
   .footer {
-    margin: 28px auto 42px 27px;
+    margin: 0 19px 36px;
   }
 }
