--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,31 +2,24 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  /* outline: 1px dotted purple; */
 }
 
 body {
-  background-color: #000;
+  background-color: rgb(0, 0, 0);
 }
 
 .page {
   font-family: "Inter", "Arial", sans-serif;
-  background-color: #000;
-  color: #fff;
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   max-width: 1280px;
   min-height: 100vh;
   margin: 0 auto;
-  /* padding: 0 10%; */
 }
 @media screen and (max-width: 725px) {
   .page {
     padding: 0;
-    margin: auto;
+    margin: 0;
     min-width: 320px;
   }
 }
-/* @media screen and (min-width: 320px) {
-  .page {
-    min-width: 320px;
-  }
-} */
